Use bearer token for authorization.
Also specify default deployment region if unset.
